# NeuROS

./: .gitignore  LICENSE  README.md  build.py  install.py  launch.py  material_conversions.txt  technical_rationale.txt
docker/neuros_gazebo/: Dockerfile  setup_gazebo.sh
docker/neuros_nest/: Dockerfile
docker/neuros_python/: Dockerfile  setup_neuros.sh
docker/neuros_tensorflow/: Dockerfile
docs/: Makefile
docs/plantuml/: architecture.txt  bridge.txt  containerisation.txt  example_4_architecture.txt  execution.txt  logical_node_separation.txt  priority_queue.txt
docs/source/: conf.py  index.rst  modules.rst
examples/: player.py  tennis.json
examples/1_tick/clock/: clock.json  clock.py
examples/2_function/tennis/: match.json  player.py
examples/2_function/voting/: authority.py  election.json
examples/2_synchronisation/tennis/: player.py
examples/2_synchronisation/voting/: authority.py  voter.py
examples/3_gazebo/elevator/: elevator.json  elevator.py
examples/3_physics_simulation/elevator/: 1_elevator_standard.json  control.json  control.py  (+7 more)
examples/4_brain_simulation/whiskeye/plugin/: CMakeLists.txt  package.xml
examples/4_brain_simulation/whiskeye/plugin/include/whiskeye_plugin/: whiskeye_plugin.hpp
examples/4_brain_simulation/whiskeye/plugin/msg/: BridgeU.msg
examples/4_brain_simulation/whiskeye/plugin/src/: whiskeye_plugin.cpp
examples/4_neurorobotics/whiskeye/nodes/robot/gazebo/plugin/: CMakeLists.txt
examples/4_neurorobotics/whiskeye/nodes/robot/gazebo/plugin/include/: visibility_control.h  whiskeye_plugin.hpp
examples/4_neurorobotics/whiskeye/nodes/robot/gazebo/plugin/msg/: BrainToBody.msg
examples/clock/: clock.py  count_seconds.json
examples/physics/: controller.py  elevator.json  elevator.py  physics.json  physics.py
examples/receive_all/: authority.py  election.json  voter.py
examples/receive_any/: player.py  tennis.json
examples/tennis/: player.py  tennis.json  wimbledon.json
examples/tick/: clock.py  count_seconds.json
examples/voting/: authority.py  election.json  voter.py
examples/whiskeye/: simulation.py  whiskeye.json
metrics/: 1_tick.py  1_tick_pure_ros2.py  2_synchronisation.py  3_physics_simulation.py  4_brain_simulation.py  metric_1_tick.py  metric_2_synchronisation.py  metric_3_physics_simulation.py  metric_4_brain_simulation.py  metric_4_neurorobotics.py  metric_4_neurorobotics_mixed.py  replot_all_results.py
metrics/common/: data.py  plot.py  run.py
metrics/nrp/: dump_sim_real_time.py  nrp.sh  nrp_credentials.txt
results_data/: 1_tick_interval.txt  2_synchronisation.txt  3_physics_simulation_1_elevator_standard.txt  3_physics_simulation_2_elevator_no_discard_limit.txt  3_physics_simulation_3_elevator_asynchronous_gazebo.txt  4_neurorobotics_2_prediction_1_tick_controlled_100ms.txt  4_neurorobotics_2_prediction_1_tick_controlled_20ms.txt  4_neurorobotics_2_prediction_1_tick_controlled_60ms.txt  4_neurorobotics_2_prediction_2_strict.txt  4_neurorobotics_2_prediction_3_no_discard_limit.txt  4_neurorobotics_2_prediction_4_asynchronous.txt  4_neurorobotics_2_prediction_5_mixed.txt  console_output.txt
results_data/nrp/: system_load.txt  time_stats.txt
results_data/pure_ros2_comparison/: 1_tick_interval.txt  report.txt
src/: cli.py  config.py  container.py  monitor.py  node.py  project_config.py  validate.py
src/neuros/: package.xml  setup.cfg  setup.py
src/nodes/: package.xml  setup.py
utils/: docker_shell.sh  setup_env.sh  spawn.sh
(+292 files in other folders)
